RESOLVED FIXED210727
[JSC] SlowPathCall is not supported by callOperation in Windows
https://bugs.webkit.org/show_bug.cgi?id=210727
Summary [JSC] SlowPathCall is not supported by callOperation in Windows
Yusuke Suzuki
Reported 2020-04-19 18:13:04 PDT
Baseline JIT should use JITSlowPathCall.
Attachments
Patch (2.86 KB, patch)
2020-04-19 18:15 PDT, Yusuke Suzuki
ross.kirsling: review+
Yusuke Suzuki
Comment 1 2020-04-19 18:15:50 PDT
Ross Kirsling
Comment 2 2020-04-19 18:50:18 PDT
Comment on attachment 396932 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=396932&action=review > Source/JavaScriptCore/jit/SlowPathCall.h:68 > + static_assert(JIT::regT0 == GPRInfo::returnValueGPR); > + static_assert(JIT::regT1 == GPRInfo::returnValueGPR2); Should we update this instead? https://github.com/WebKit/webkit/blob/master/Source/JavaScriptCore/jit/GPRInfo.h#L796-L799
Yusuke Suzuki
Comment 3 2020-04-19 18:51:43 PDT
Comment on attachment 396932 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=396932&action=review >> Source/JavaScriptCore/jit/SlowPathCall.h:68 >> + static_assert(JIT::regT1 == GPRInfo::returnValueGPR2); > > Should we update this instead? > https://github.com/WebKit/webkit/blob/master/Source/JavaScriptCore/jit/GPRInfo.h#L796-L799 For non-Windows x64, returnValueGPR2 is not regT1. We are using this static_assert only inside `OS(WINDOWS)`.
Yusuke Suzuki
Comment 4 2020-04-19 18:56:30 PDT
Radar WebKit Bug Importer
Comment 5 2020-04-19 18:57:16 PDT
Note You need to log in before you can comment on or make changes to this bug.