[JSC] SlowPathCall is not supported by callOperation in Windows https://bugs.webkit.org/show_bug.cgi?id=210727

Reviewed by Ross Kirsling.

In Windows, SlowPathCall should be handled by JITSlowPathCall, otherwise, stack is not correctly allocated.

* jit/JITCall.cpp:
(JSC::JIT::emit_op_iterator_open):
(JSC::JIT::emit_op_iterator_next):
* jit/SlowPathCall.h:
(JSC::JITSlowPathCall::call):

Canonical link: https://commits.webkit.org/223606@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@260346 268f45cc-cd09-0410-ab3c-d52691b4dbfc